# fast-todo

./: Dockerfile.dev  README.md  pyproject.toml
tests/: test_main_api.py
todo/: app.py
