[tool.poetry]
name = "fast-todo"
version = "0.1.0"
description = "Com esse projeto temos a inteção de estudar a criação de API's com fastAPI. Orientação Riverfount."
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
license = "GPLv3+"
readme = "README.md"
packages = [{include = "fast_todo"}]

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-order = "^1.1.0"
ipython = "^8.17.2"
ipdb = "^0.13.13"
httpx = "^0.25.1"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
